--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
 	background-color: ##f7fadc;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, serif;
 }
 * {
-	box-sizing: content-box;
+	box-sizing: border-box;
 }
 h1 {
 	text-align: center;
@@ -42,14 +42,12 @@ section.select a:hover, a:active{
 }
 
 section.select a{
- 	font-family: sans-serif;
  	display: inline-block;
  	text-align: center;
- 	text-indent: none;
  	font-weight: bold;
 	background-color: transparent;
 	width: 9em;
-	margin: auto;
+	margin-right : 43px;
 	border: 2px solid #111;
 	padding: 18px 0;
 	letter-spacing: 0.4px;
@@ -60,7 +58,6 @@ section.select a{
 	margin-bottom: 1px;
 	-webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
-    -ms-transition: all 300ms ease;
     transition: all 300ms ease;
     
 }
