--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: ##f7fadc;
+	background-color: #fff;
 	font-family: Arial, Helvetica, serif;
 }
 * {
@@ -25,7 +25,7 @@ section.pic span{
 	font-weight: bold;
 }
 
-section ul {
+section.select ul {
 	list-style: none;
 	margin: auto;
 	text-align: center;
@@ -55,9 +55,8 @@ section.select a{
 	text-transform: uppercase;
 	position: relative;
 	border-radius: 10px; 
-	margin-bottom: 1px;
+	margin-bottom: 9px;
 	-webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
     transition: all 300ms ease;
-    
 }
