--- a/style.css
+++ b/style.css
@@ -1,21 +1,62 @@
-body {
-	background-color: #fff;
-	font-family: Arial, Helvetica, serif;
+@font-face {
+  font-family: myFirstFont;
+  src: url(Open_Sans/OpenSans-SemiBold.ttf);
 }
+	
+body {
+	font-family: Cantarell;
+	margin-top: 0px;
+	padding: 10px;
+	color: #1f1f1f;
+}
+#footer ul{
+
+    margin-top: 0px;
+    margin-bottom: -18px;
+    margin-left: -18px;
+    margin-right: -18px;
+    background-color: #1f1f1f;
+    padding: 32px;
+    color: #f1f1f1;
+}
+
 * {
 	box-sizing: border-box;
 }
-h1 {
+p, li{
+	line-height: 1.9;
+	list-style: none;
+	text-decoration: none;
+}
+section.socialMedia {
+	margin-top: 10px;
+}
+header {
+	direction: rtl;
+	position: fixed;
+	margin-left: 1500px;
+}
+
+nav > a {
+	text-decoration: none;
+	padding: 8px;
+	border-radius: 20%;
+}
+
+
+section.welcome h1 {
+	text-align: center;
+	font-size: 1.8em;
+	font-weight: ;
+}
+section.welcome p {
 	text-align: center;
 	font-size: 1.4em;
 	font-weight: ;
 }
-p {
-	text-align: center;
-	font-size: 1.4em;
-	font-weight: normal;
-}
+
 section.pic {
+	padding-top: 40px;
 	text-align: center;
 }
 section.pic >div>a>img {
@@ -25,14 +66,14 @@ section.pic span{
 	font-weight: bold;
 }
 
-section.select ul {
+section.select, section.socialMedia {
 	list-style: none;
 	margin: auto;
 	text-align: center;
-
 }
 section.select a:link, a:visited{
-	color : #326891;
+	
+	color : #1f1f1f;
 	background-color: transparent;
 	text-decoration: none;
 }
@@ -43,11 +84,11 @@ section.select a:hover, a:active{
 
 section.select a{
  	display: inline-block;
+ 	margin-top: 10px;
  	text-align: center;
  	font-weight: bold;
 	background-color: transparent;
 	width: 9em;
-	margin-right : 43px;
 	border: 2px solid #111;
 	padding: 18px 0;
 	letter-spacing: 0.4px;
@@ -60,3 +101,31 @@ section.select a{
     -moz-transition: all 300ms ease;
     transition: all 300ms ease;
 }
+
+section.aboutMe , section.other , section.favourites, section.goals{
+	margin-top: 500px;
+	margin-right: 100px;
+
+}
+section.aboutMe h1, section.other h1, section.favourites h1, section.goals h1{
+	text-align: left;
+	align-content: left;
+	margin-left: 5%;
+}
+section.aboutMe p ,section.goals p,section.favourites p,section.other p {
+	text-align: left;
+	align-content: left;
+	margin-left: 7.5%;
+	text-decoration: none;
+	list-style: none;
+	width: 50%;
+	}
+
+
+section.favourites li{
+	text-align: left;
+	margin-left: 5%;
+	text-decoration: none;
+	list-style: none;
+}
+
