--- a/style.css
+++ b/style.css
@@ -12,16 +12,14 @@ body {
 #footer{
 	flex-direction: row;
 	justify-content: space-between;
-	display: flex;
-	padding-top: 25%;
+	padding-top: 25%; 
+    margin-top: 0%;
+    margin-bottom: -18%;
+    margin-left: -1.2%;
+    margin-right: -1%;
 
 }
 #footer ul{
-
-    margin-top: 0px;
-    margin-bottom: -18px;
-    margin-left: -18px;
-    margin-right: -18px;
     background-color: #1f1f1f;
     padding: 32px;
     color: #f1f1f1;
@@ -36,9 +34,7 @@ p, li{
 	list-style: none;
 	text-decoration: none;
 }
-section.socialMedia {
-	margin-top: 10px;
-}
+
 header {
 	direction: rtl;
 	position: fixed;
@@ -52,23 +48,21 @@ nav > a {
 	text-decoration: none;
 	padding: 8px;
 	margin: auto;
-	border-radius: 20%;
+	border-radius: 10%;
 }
 
 
 section.welcome h1 {
 	text-align: center;
 	font-size: 1.8em;
-	font-weight: ;
 }
 section.welcome p {
 	text-align: center;
 	font-size: 1.4em;
-	font-weight: ;
 }
 
 section.pic {
-	padding-top: 40px;
+	padding-top: 1.5%;
 	text-align: center;
 }
 section.pic >div>a>img {
@@ -95,7 +89,7 @@ section.select a:hover, a:active{
 
 section.select a{
  	display: inline-block;
- 	margin-top: 10px;
+ 	margin-top: 1%;
  	text-align: center;
  	font-weight: bold;
 	background-color: transparent;
@@ -107,7 +101,7 @@ section.select a{
 	text-transform: uppercase;
 	position: relative;
 	border-radius: 10px; 
-	margin-bottom: 9px;
+	margin-bottom: 1%;
 	-webkit-transition: all 300ms ease;
     -moz-transition: all 300ms ease;
     transition: all 300ms ease;
@@ -115,7 +109,7 @@ section.select a{
 
 section.aboutMe , section.other , section.favourites, section.goals{
 	margin-top: 50%;
-	margin-right: 100px;
+	margin-right: 10%;
 
 }
 section.aboutMe h1, section.other h1, section.favourites h1, section.goals h1{
@@ -131,12 +125,4 @@ section.aboutMe p ,section.goals p,section.favourites p,section.other p {
 	list-style: none;
 	width: 50%;
 	}
-
-
-section.favourites li{
-	text-align: left;
-	margin-left: 5%;
-	text-decoration: none;
-	list-style: none;
-}
 
