--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 	
 body {
-	font-family: Cantarell;
+	font-family: Cantarell, Open_Sans, sans-serif;
 	margin-top: 0px;
 	padding: 10px;
 	color: #1f1f1f;
