--- a/style.css
+++ b/style.css
@@ -51,7 +51,11 @@ nav > a {
 	text-decoration: none;
 	padding: 8px;
 	margin: auto;
-	border-radius: 10%;
+	border-radius: 1%;
+	color: #1f1f1f;
+	-webkit-transition: all 300ms ease;
+    -moz-transition: all 300ms ease;
+
 }
 
 
